--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,83 +1,81 @@
 # ----------------------------------------------------------------------------
-# MDN Content CODEOWNERS
+# MDN вмісту ВЛАСНИКИ КОДІВ
 # ----------------------------------------------------------------------------
-# Order is important. The last matching pattern takes precedence. For more
-# detailed information, see:
+# Порядок важливий. Останній відповідний шаблон має пріоритет. Для отримання більш детальної інформації див:
 # https://docs.github.com/en/free-pro-team@latest/github/creating-cloning-and-archiving-repositories/about-code-owners
 # ----------------------------------------------------------------------------
 
 # ----------------------------------------------------------------------------
-# DEFAULT OWNERS
+# ВЛАСНИКИ ЗА ЗАМОВЧУВАННЯМ
 # ----------------------------------------------------------------------------
 *    @mdn/core-yari-content
 
 # ----------------------------------------------------------------------------
-# DEFAULT ENGLISH CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ ЗА ЗАМОВЧУВАННЯМ
 # ----------------------------------------------------------------------------
 /files/en-us/    @mdn/yari-content-mdn
 
 # ----------------------------------------------------------------------------
-# ENGLISH WEB ACCESSIBILITY CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ ВЕБ-ДОСТУПНОСТІ
 # ----------------------------------------------------------------------------
 /files/en-us/web/accessibility/    @mdn/yari-content-accessibility
 /files/en-us/learn/accessibility/    @mdn/yari-content-accessibility
 
 # ----------------------------------------------------------------------------
-# ENGLISH CSS CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ CSS 
 # ----------------------------------------------------------------------------
 /files/en-us/web/css/    @mdn/yari-content-css
 /files/en-us/learn/css/    @mdn/yari-content-css
 
 # ----------------------------------------------------------------------------
-# ENGLISH HTML CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ HTML
 # ----------------------------------------------------------------------------
 /files/en-us/web/html/    @mdn/yari-content-html
 /files/en-us/learn/html/    @mdn/yari-content-html
 
 # ----------------------------------------------------------------------------
-# ENGLISH JAVASCRIPT CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ JAVASCRIPT
 # ----------------------------------------------------------------------------
 /files/en-us/web/javascript/    @mdn/yari-content-javascript
 /files/en-us/learn/javascript/    @mdn/yari-content-javascript
 
 # ----------------------------------------------------------------------------
-# ENGLISH HTTP CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ HTTP
 # ----------------------------------------------------------------------------
 /files/en-us/web/http/    @mdn/yari-content-http
 /files/en-us/learn/server-side/    @mdn/yari-content-http
 
 # ----------------------------------------------------------------------------
-# ENGLISH WEB API CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ WEB API
 # ----------------------------------------------------------------------------
 /files/en-us/web/api/    @mdn/yari-content-web-api
 
 # ----------------------------------------------------------------------------
-# ENGLISH SVG CONTENT OWNER(S)
+# EВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ SVG
 # ----------------------------------------------------------------------------
 /files/en-us/web/svg/    @mdn/yari-content-svg
 
 # ----------------------------------------------------------------------------
-# ENGLISH MOZILLA ADD-ONS CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ MOZILLA ADD-ONS
 # ----------------------------------------------------------------------------
 /files/en-us/mozilla/add-ons/    @mdn/yari-content-mozilla-add-ons
 
 # ----------------------------------------------------------------------------
-# ENGLISH MATHML CONTENT OWNER(S)
+# ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ MATHML
 # ----------------------------------------------------------------------------
 /files/en-us/web/mathml/    @mdn/content-mathml
 
 
 # ----------------------------------------------------------------------------
-# CONTROL FILES OWNER(S)
+# ВЛАСНИК(И) ФАЙЛІВ КОНТРОЛЮ
 # ----------------------------------------------------------------------------
-# These should be the last matches in this file, since any pull request that
-# tries to change any one or more of these files should be escalated to the
-# owners specified here.
+# Це мають бути останні збіги у цьому файлі, оскільки будь-який запит на вилучення, який намагається змінити будь-який один 
+або більше з цих файлів, має бути переданий власникам, указаним тут.
 # ----------------------------------------------------------------------------
 /.github/     @mdn/core-dev
 /*            @mdn/core-dev
 /*.md         @mdn/core-yari-content
-# These are @schalkneethling because the auto-merge GHA workflow uses my PAT and will assign me.
-# If we add another reviewer, the auto-merge will cease to be automatic.
+# Це @schalkneethling, тому що робочий процес автоматичного об’єднання GHA використовує мій PAT і призначить мені.
+# Якщо ми додамо іншого рецензента, автоматичне об’єднання перестане бути автоматичним.
 /package.json @schalkneethling
 /yarn.lock    @schalkneethling
