--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -70,7 +70,7 @@
 # ВЛАСНИК(И) ФАЙЛІВ КОНТРОЛЮ
 # ----------------------------------------------------------------------------
 # Це мають бути останні збіги у цьому файлі, оскільки будь-який запит на вилучення, який намагається змінити будь-який один 
-або більше з цих файлів, має бути переданий власникам, указаним тут.
+# або більше з цих файлів, має бути переданий власникам, указаним тут.
 # ----------------------------------------------------------------------------
 /.github/     @mdn/core-dev
 /*            @mdn/core-dev
