--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -42,8 +42,8 @@
 # ----------------------------------------------------------------------------
 # ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ HTTP
 # ----------------------------------------------------------------------------
-/files/en-us/web/http/    @mdn/yari-content-http
-/files/en-us/learn/server-side/    @mdn/yari-content-http
+# /files/en-us/web/http/    @mdn/yari-content-http
+# /files/en-us/learn/server-side/    @mdn/yari-content-http
 
 # ----------------------------------------------------------------------------
 # ВЛАСНИК(И) АНГЛІЙСЬКОГО ВМІСТУ WEB API
@@ -72,10 +72,10 @@
 # Це мають бути останні збіги у цьому файлі, оскільки будь-який запит на вилучення, який намагається змінити будь-який один 
 # або більше з цих файлів, має бути переданий власникам, указаним тут.
 # ----------------------------------------------------------------------------
-/.github/     @mdn/core-dev
-/*            @mdn/core-dev
-/*.md         @mdn/core-yari-content
+# /.github/     @mdn/core-dev
+# /*            @mdn/core-dev
+# /*.md         @mdn/core-yari-content
 # Це @schalkneethling, тому що робочий процес автоматичного об’єднання GHA використовує мій PAT і призначить мені.
 # Якщо ми додамо іншого рецензента, автоматичне об’єднання перестане бути автоматичним.
-/package.json @schalkneethling
+# /package.json @schalkneethling
 /yarn.lock    @schalkneethling
